Fix margin alignment

--- a/indico/modules/rb/client/js/modules/bookRoom/BookRoom.module.scss
+++ b/indico/modules/rb/client/js/modules/bookRoom/BookRoom.module.scss
@@ -38,6 +38,8 @@
         display: flex;
         justify-content: flex-end;
 
+        :global(.icon:last-child) {
+            margin-right: 0.75em;
         }
     }
 }
